--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,15 @@
     background-repeat: no-repeat;
     background-position: left 414px top 122px, left 213px top 191px, left 937px top 39px,  left 397px top 118px;
   }
+  @media only screen and (min-width: 375px) {
+    .hero {
+        width: 375px;
+   margin-left: auto;
+   margin-right: auto; 
+   padding-left: 16px;
+   padding-right: 16px;
+   outline: 2px solid red;}
+    }
   .text {
     display: flex;
     align-items: center;
