--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,13 @@
     text-decoration: none;
   }
   .conteiner {
-    /*width: 1216px;*/
+    width: 1216px;
        margin-left: auto;
    margin-right: auto; 
    padding-left: 16px;
    padding-right: 16px;
   }
-  @media only screen and (min-width: 375px) {
+ /* @media only screen and (min-width: 375px) {
     .conteiner {
         width: 375px;
    margin-left: auto;
@@ -65,7 +65,7 @@
    padding-left: 16px;
    padding-right: 16px;
    outline: 2px solid red;}
-    }
+    }*/
   .hero {
     margin-left: 0;
     padding-top: 62px;
@@ -77,7 +77,7 @@
     background-repeat: no-repeat;
     background-position: left 414px top 122px, left 213px top 191px, left 937px top 39px,  left 397px top 118px;
   }
-  @media only screen and (min-width: 375px) {
+  /*@media only screen and (min-width: 375px) {
     .hero {
         width: 375px;
    margin-left: auto;
@@ -85,7 +85,7 @@
    padding-left: 16px;
    padding-right: 16px;
    outline: 2px solid red;}
-    }
+    }*/
   .text {
     display: flex;
     align-items: center;
