--- a/css/style.css
+++ b/css/style.css
@@ -453,7 +453,7 @@ button {
     height: 586px;
     background-image: url(../img/image.png), url(../img/banana.png), url(../img/strawberi.png), url(../img/border.svg);
     background-repeat: no-repeat;
-    background-position: left 414px top 122px, left 213px top 191px, left 937px top 39px,  left 397px top 118px;
+    /*background-position: left 414px top 122px, left 213px top 191px, left 937px top 39px,  left 397px top 118px;*/
 }
 @media only screen and (min-width: 768px){
     .hero-main-img {
