--- a/css/style.css
+++ b/css/style.css
@@ -449,26 +449,86 @@ button {
     padding-bottom: 19px;
     padding-left: 19px;
     padding-right: 19px;
-    width: 343px;
-    height: 586px;
-    background-image: url(../img/image.png), url(../img/banana.png), url(../img/strawberi.png), url(../img/border.svg);
+    width: 335px;
+    height: 524px;
+    background-image: url(../img/image.png);
     background-repeat: no-repeat;
+    background-size: contain;
+    background-position-y: 64px;
+    border-radius: 500px;
+    box-shadow: 0 -2px var(--red-color),0 1.5px 0 0.4px #ffffff80;
+
     /*background-position: left 414px top 122px, left 213px top 191px, left 937px top 39px,  left 397px top 118px;*/
 }
 @media only screen and (min-width: 768px){
     .hero-main-img {
-        width: 100%;
-        height: 800px;   
+        width: 468px;
+        height: 742px;   
     }
 }
 @media only screen and (min-width: 1280px){
     .hero-main-img {
-       width: 100%;
-       height: 800px;
-       margin-left: 265px;
+        width: 468px;
+        height: 742px;
     }
 }
-
+.hero-main-img-banana {
+    width: 70px;
+    height: 100px;
+    background-image: url(../img/banana.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: 70px;
+    left: -16px;
+    filter: blur(2px);
+    transform: rotate(20deg);
+}
+@media only screen and (min-width: 768px){
+    .hero-main-img-banana {
+        width: 162px;
+        height: 130px;
+    top: 115px;
+    left: 12px;
+    filter: blur(3.5px);
+    transform: rotate(0deg);  
+    }
+}
+@media only screen and (min-width: 768px){
+    .hero-main-img-banana {
+        width: 184px;
+    height: 184px;
+    top: 115px;
+    left: 240px;
+    }
+}
+.hero-main-img-straw {
+    width: 56px;
+    height: 56px;
+    background-image: url(../img/strawberi.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    right: 0;
+    top: 12px;
+    filter: blur(2px);
+}
+@media only screen and (min-width: 768px){
+    .hero-main-img-straw {
+        width: 108px;
+        height: 108px;
+        top: 0px;
+        filter: blur(3.5px);
+        transform: rotate(0deg);
+        right: 50px;    }
+}
+@media only screen and (min-width: 768px){
+    .hero-main-img-straw {
+        width: 120px;
+        height: 120px;
+        top: 0px;
+        right: 260px;}
+}
 .hero-button{
     min-width: 80px;
     height: 80px;
@@ -481,7 +541,6 @@ button {
     align-items: center;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -40px;
     transform: rotate(-14deg);
 
     font-weight: 500;
